<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.profile.Preferences">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_the_language"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_English"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/english"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_Portuguese"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/portuguese"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_Italian"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/italian"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/bt_save_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_rectangle_for_buttons"
            android:text="@string/apply_changes"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>