<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/linearLayout14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title_typeChart"
                    style="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/select_type_of_chart" />

                <ToggleButton
                    android:id="@+id/bt_typeChart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_backgroundv2"
                    android:textColor="@color/primary_white"
                    android:textOff="@string/months"
                    android:textOn="@string/seasons" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart_total_profits"
                    android:layout_width="match_parent"
                    android:layout_height="280dp">

                </com.github.mikephil.charting.charts.PieChart>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalProfitsByHotel"
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="56dp"
                        android:text="@string/total_profits" />

                    <TextView
                        android:id="@+id/hotelProfits"
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16sp"
                        android:text="@string/profits" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart_total_bookings"
                    android:layout_width="match_parent"
                    android:layout_height="280dp">

                </com.github.mikephil.charting.charts.PieChart>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalBookingsByHotel"
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:text="Total Bookings" />

                    <TextView
                        android:id="@+id/hotelBookings"
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16sp"
                        android:text="Bookings" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>